--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
+        versionCode rootProject.ext.serverVersionCode
         versionName rootProject.ext.versionName
     }
 
