--- a/api/build.gradle
+++ b/api/build.gradle
@@ -40,6 +40,7 @@ task generateCodes(type: Exec) {
 }
 
 project.afterEvaluate {
+    preBuild.dependsOn ':generator:build'
     preBuild.dependsOn generateCodes
 }
 
