--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="moe.shizuku.privileged.api"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="moe.shizuku.privileged.api">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED" />
 
     <permission
         android:name="${applicationId}.permission.REQUEST_AUTHORIZATION"
         android:description="@string/request_permission_description"
         android:label="@string/request_permission_label"
-        android:protectionLevel="normal"/>
+        android:protectionLevel="normal" />
     <permission
         android:name="${applicationId}.permission.RECEIVE_TASK_STACK_CHANGED"
         android:description="@string/receive_task_stack_changed_description"
         android:label="@string/receive_task_stack_changed_label"
-        android:protectionLevel="normal"/>
+        android:protectionLevel="normal" />
     <permission
         android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED"
-        android:protectionLevel="signature"/>
+        android:protectionLevel="signature" />
     <permission
         android:name="${applicationId}.permission.RECEIVE_CLEAR_TOKEN"
-        android:protectionLevel="normal"/>
+        android:protectionLevel="normal" />
 
     <application
         android:name=".PAApplication"
@@ -40,50 +40,51 @@
             android:exported="true"
             android:theme="@style/GrantPermissions">
             <intent-filter>
-                <action android:name="${applicationId}.intent.action.AUTHORIZATION"/>
+                <action android:name="${applicationId}.intent.action.AUTHORIZATION" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AppsActivity"
-                  android:label="@string/authorized_apps_manage"
-                  android:theme="@style/AppTheme.Apps">
-        </activity>
+        <activity
+            android:name=".AppsActivity"
+            android:label="@string/authorized_apps_manage"
+            android:theme="@style/AppTheme.Apps"/>
 
         <receiver
             android:name=".receiver.BootReceiver"
             android:enabled="true"
             android:exported="true">
-            <intent-filter
-                android:priority="999">
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            <intent-filter android:priority="999">
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".receiver.ServerStartedReceiver"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.INTERACT_ACROSS_USERS_FULL">
             <intent-filter>
-                <action android:name="${applicationId}.intent.action.SERVER_STARTED"/>
+                <action android:name="${applicationId}.intent.action.SERVER_STARTED" />
             </intent-filter>
         </receiver>
 
         <provider
-            android:authorities="${applicationId}.auth"
             android:name=".provider.AuthProvider"
-            android:permission="${applicationId}.permission.REQUEST_AUTHORIZATION"
+            android:authorities="${applicationId}.auth"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true"
+            android:permission="${applicationId}.permission.REQUEST_AUTHORIZATION" />
 
+        <service
+            android:name=".service.WorkService"
+            android:exported="false"/>
     </application>
 
 </manifest>
