feat(manager): add appcompat to get the same look between different devices

--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
             android:theme="@style/AppTheme.Apps" />
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/action_settings" />
+            android:label="@string/action_settings"
+            android:theme="@style/AppTheme.Apps" />
 
 
         <receiver
