--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -51,9 +51,11 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
     compile project(':server')
-    compile "com.android.support:support-v4:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:support-fragment:$supportLibraryVersion"
     compile "com.android.support:cardview-v7:$supportLibraryVersion"
-    compile "moe.shizuku.support:recyclerview-v7:$supportLibraryVersion"
+    compile "moe.shizuku.support:recyclerview-v7:25.3.1"
+    compile 'moe.shizuku.support:preference:1.1'
     compile 'moe.shizuku.utils:libsuperuser:1.1'
     compile 'moe.shizuku.utils:support-utils:1.1'
     compile 'moe.shizuku.utils:recyclerview-utils:1.1'
