--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,13 @@ task clean(type: Delete) {
 }
 
 ext {
-    supportLibraryVersion = '25.4.0'
+    supportLibraryVersion = '26.0.2'
+    preferenceLibraryVersion = '2.0.5'
+
     minSdkVersion = 21
-    targetSdkVersion = 25
-    buildToolsVersion = "25.0.3"
+    targetSdkVersion = 26
+    buildToolsVersion = "26.0.1"
     versionCode = 39
-    versionName = "0.2.13"
+    versionName = "2.0.0 dev"
     serverVersionCode = 23
 }
