--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -34,9 +34,13 @@ android {
     }
     sourceSets {
         main {
+            // don't need anymore since gradle will auto put binary output into apk
             // executable files output directory defined in src/main/jni/CMakeList.txt
-            jniLibs.srcDirs 'build/starter'
+            //jniLibs.srcDirs 'build/starter'
         }
+    }
+    lintOptions {
+        disable 'AppCompatCustomView'
     }
 }
 
