--- a/api/build.gradle
+++ b/api/build.gradle
@@ -21,8 +21,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets.main.aidl.srcDirs = ['../app/src/main/aidl', '../hidden-api-public/src/main/aidl']
-    sourceSets.main.java.srcDirs = ['../hidden-api-public/src/main/java', 'src/main/java']
 }
 
 dependencies {
@@ -35,7 +33,7 @@ dependencies {
     compile 'com.android.support:support-annotations:25.3.1'
 }
 
-task generateCodes(type: Exec) {
+/*task generateCodes(type: Exec) {
     commandLine 'java', '-classpath', '../generator/build/classes/java/main/', 'moe.shizuku.AidlParser', 'api'
 }
 
@@ -45,7 +43,7 @@ project.afterEvaluate {
 }
 
 clean.dependsOn generateCodes
-clean.mustRunAfter generateCodes
+clean.mustRunAfter generateCodes*/
 
 task copyLibs(type: Copy) {
     from configurations.compile
