--- a/hidden-api/build.gradle
+++ b/hidden-api/build.gradle
@@ -19,5 +19,5 @@ android {
 
 dependencies {
     compile 'com.android.support:support-annotations:25.3.1'
-    compile project(':hidden-api-public')
+    //compile project(':hidden-api-public')
 }
