--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -1,10 +1,28 @@
 apply plugin: 'java'
 
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'moe.shizuku.AidlParser'
+    }
+    from {
+        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+            exclude "META-INF/*.DSA"
+            exclude "META-INF/*.RSA"
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup:javapoet:1.9.0'
     compile 'com.github.javaparser:javaparser-core:3.4.0'
 }
+
