finish RequestHandler class generator

--- a/api-26/build.gradle
+++ b/api-26/build.gradle
@@ -26,6 +26,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':public')
-    //implementation 'com.android.support:support-annotation:26.0.2'
+    implementation project(':share')
 }
