--- a/server-26/build.gradle
+++ b/server-26/build.gradle
@@ -2,4 +2,6 @@ apply plugin: 'java-library'
 
 dependencies {
     compileOnly files(rootProject.rootDir.absolutePath + "/android-26/android.jar")
+    compileOnly project(':share')
+    compileOnly project(':server-share')
 }
