--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,9 @@
-include ':generator', ':api-26', ':public'
-include ':server'
+include ':generator'
+
+include ':share'
+include ':api-26'
+
+include ':server', ':server-share'
 include ':server-26'
+
 include ':manager'
