--- a/api-26/build.gradle
+++ b/api-26/build.gradle
@@ -1,29 +1,7 @@
-//apply plugin: 'com.android.library'
 apply plugin: 'java-library'
 
-/*android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
-
-
-    defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}*/
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
 
 jar {
     from {
