--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -50,7 +50,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
-    implementation project(':server')
+    implementation project(':share')
     implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation "com.android.support:support-fragment:$supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$supportLibraryVersion"
@@ -59,8 +59,8 @@ dependencies {
     implementation "moe.shizuku.preference:preference-dialog-android:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-simplemenu:$preferenceLibraryVersion"
     implementation 'moe.shizuku.utils:libsuperuser:1.1'
-    implementation 'moe.shizuku.support:support-utils:2.0'
-    implementation 'moe.shizuku.support:recyclerview-utils:2.0'
+    implementation 'moe.shizuku.support:support-utils:2.0.1'
+    implementation 'moe.shizuku.support:recyclerview-utils:2.0.2'
 }
 
 def ksFile = file('signing.properties')
