--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    implementation project(':share')
     implementation project(':api-26')
 }
