--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="moe.shizuku.sample">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="moe.shizuku.privileged.api.permission.REQUEST_AUTHORIZATION"/>
 
     <application
         android:allowBackup="false"
