add generate code, jar2dex gradle task / start server from manager app

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
-include ':generator'
+include ':generator', ':server-stub'
 
 include ':share'
 include ':api-26'
 
-include ':server', ':server-share'
+include ':server-share'
 include ':server-26'
 
 include ':manager', ':sample'
