--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -44,6 +44,10 @@ android {
     }
 }
 
+gradle.projectsEvaluated {
+    preBuild.dependsOn(':server-26:dex')
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
