--- a/server-26/build.gradle
+++ b/server-26/build.gradle
@@ -1,7 +1,11 @@
-apply plugin: 'java-library'
+apply plugin: 'java'
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+
+apply from: rootProject.file('server-dex.gradle')
 
 dependencies {
-    compileOnly files(rootProject.rootDir.absolutePath + "/android-26/android.jar")
-    compileOnly project(':share')
-    compileOnly project(':server-share')
+    compileOnly files(rootProject.rootDir.absolutePath + '/android-26/android.jar')
+    compile project(':server-share')
 }
