--- a/server-stub/build.gradle
+++ b/server-stub/build.gradle
@@ -1,7 +1,6 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 dependencies {
     compileOnly files(rootProject.rootDir.absolutePath + '/android-26/android.jar')
-    compileOnly project(':server-stub')
-    compile project(':share')
+    compileOnly project(':share')
 }
