--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
-include ':generator', ':server-stub'
+include ':generator', ':server-stub', ':api'
 
 include ':share'
-include ':api-26'
+include ':api-21', ':api-26'
 
 include ':server-share'
-include ':server-26'
+include ':server-21', ':server-26'
 
 include ':manager', ':sample'
