--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -47,6 +47,10 @@ android {
 gradle.projectsEvaluated {
     preBuild.dependsOn(':generator:generate')
     preBuild.dependsOn(':server-21:dex')
+    preBuild.dependsOn(':server-22:dex')
+    preBuild.dependsOn(':server-23:dex')
+    preBuild.dependsOn(':server-24:dex')
+    preBuild.dependsOn(':server-25:dex')
     preBuild.dependsOn(':server-26:dex')
 }
 
