introduce font provider

--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'moe.shizuku.utils:libsuperuser:1.1'
     implementation 'moe.shizuku.support:support-utils:2.0.1'
     implementation 'moe.shizuku.support:recyclerview-utils:2.0.2'
+    implementation 'moe.shizuku.fontprovider:api:7'
 }
 
 def ksFile = file('signing.properties')
