fix BroadcastReceiver components are not allowed to bind to services

--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -99,6 +99,10 @@
             android:name=".service.ShellService"
             android:enabled="true"
             android:exported="true" />
+        <service
+            android:name=".service.BootCompleteService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
