--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="moe.shizuku.api" />
+    package="moe.shizuku.api">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="moe.shizuku.manager.permission.API"/>
+
+</manifest>
