--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -1,8 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="moe.shizuku.api">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="moe.shizuku.manager.permission.API" android:maxSdkVersion="23"/>
-    <uses-permission-sdk-23 android:name="moe.shizuku.manager.permission.API_V23" />
-
-</manifest>
+    package="moe.shizuku.api" />
