--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -3,25 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="moe.shizuku.manager">
 
-    <uses-sdk android:maxSdkVersion="26" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED" />
 
     <permission
-        android:name="moe.shizuku.manager.permission.API"
-        android:description="@string/permission_description"
-        android:label="@string/permission_label"
-        android:protectionLevel="normal"/>
+        android:name="${applicationId}.permission.REQUEST_AUTHORIZATION"
+        android:description="@string/request_permission_description"
+        android:label="@string/request_permission_label"
+        android:protectionLevel="normal" />
     <permission
-        android:name="moe.shizuku.manager.permission.API_V23"
-        android:description="@string/permission_description"
-        android:label="@string/permission_label"
-        android:protectionLevel="dangerous"/>
+        android:name="${applicationId}.permission.RECEIVE_TASK_STACK_CHANGED"
+        android:description="@string/receive_task_stack_changed_description"
+        android:label="@string/receive_task_stack_changed_label"
+        android:protectionLevel="normal" />
     <permission
         android:name="${applicationId}.permission.RECEIVE_SERVER_STARTED"
         android:protectionLevel="signature" />
+    <permission
+        android:name="${applicationId}.permission.RECEIVE_CLEAR_TOKEN"
+        android:protectionLevel="normal" />
 
     <application
         android:name=".ShizukuManagerApplication"
@@ -33,25 +34,12 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".AuthorizationActivity"
-            android:enabled="@bool/auth_activity_enabled"
+            android:name=".RequestAuthorizationActivity"
+            android:enabled="true"
             android:excludeFromRecents="true"
             android:exported="true"
-            android:permission="moe.shizuku.manager.permission.API"
-            android:theme="@style/GrantPermissions">
-            <intent-filter>
-                <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".AuthorizationActivityV23"
-            android:enabled="@bool/auth_activity_v23_enabled"
-            android:excludeFromRecents="true"
-            android:exported="true"
-            android:permission="moe.shizuku.manager.permission.API_V23"
-            android:theme="@style/GrantPermissions">
+            android:theme="@style/GrantPermissions"
+            android:permission="${applicationId}.permission.REQUEST_AUTHORIZATION">
             <intent-filter>
                 <action android:name="${applicationId}.intent.action.REQUEST_AUTHORIZATION" />
 
@@ -73,12 +61,14 @@
             android:name=".SettingsActivity"
             android:label="@string/action_settings"
             android:theme="@style/AppTheme.Apps" />
+
         <activity
             android:name=".TokenReceiveActivity"
+            android:theme="@style/Translucent"
             android:enabled="true"
             android:exported="true"
-            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL"
-            android:theme="@style/Translucent">
+            android:permission="android.permission.INTERACT_ACROSS_USERS_FULL">
+
             <intent-filter>
                 <action android:name="${applicationId}.intent.action.SERVER_STARTED" />
 
@@ -87,7 +77,7 @@
         </activity>
 
         <receiver
-            android:name=".receiver.BootCompleteReceiver"
+            android:name=".receiver.BootReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="999">
@@ -95,15 +85,17 @@
             </intent-filter>
         </receiver>
 
+        <provider
+            android:name=".provider.AuthProvider"
+            android:authorities="${applicationId}.auth"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="${applicationId}.permission.REQUEST_AUTHORIZATION" />
+
         <service
             android:name=".service.WorkService"
             android:exported="false" />
-        <service
-            android:name=".service.ShellService"
-            android:exported="false" />
-        <service
-            android:name=".service.BootCompleteService"
-            android:exported="false" />
+
     </application>
 
 </manifest>
