--- a/server-base/build.gradle
+++ b/server-base/build.gradle
@@ -3,5 +3,5 @@ apply plugin: 'java'
 dependencies {
     compileOnly files(rootProject.rootDir.absolutePath + '/android-26/android.jar')
     compileOnly project(':server-stub')
-    compile project(':share')
+    compile project(':api-base')
 }
