--- a/server-23/build.gradle
+++ b/server-23/build.gradle
@@ -7,5 +7,5 @@ apply from: rootProject.file('server-dex.gradle')
 
 dependencies {
     compileOnly files(rootProject.rootDir.absolutePath + '/android-23/android.jar')
-    compile project(':server-share')
+    compile project(':server-base')
 }
