--- a/server-stub/build.gradle
+++ b/server-stub/build.gradle
@@ -2,5 +2,5 @@ apply plugin: 'java-library'
 
 dependencies {
     compileOnly files(rootProject.rootDir.absolutePath + '/android-26/android.jar')
-    compileOnly project(':share')
+    compileOnly project(':api-base')
 }
