--- a/server-dex.gradle
+++ b/server-dex.gradle
@@ -14,6 +14,9 @@ if (OperatingSystem.current().isWindows()) {
 task dex(type: Exec) {
     dependsOn jar
 
+    file(rootProject.rootDir.path + "/manager/src/main/assets/").mkdirs()
+    file(project.buildDir.path + "/libs/").mkdirs()
+
     commandLine dx,
             '--dex',
             '--output=' + file(rootProject.rootDir.path + "/manager/src/main/assets/" + project.name + ".dex").path,
